# Graphics-Test-6

./: .gitignore  CMakeLists.txt  README.md  run.bat  run.sh
src/: main.cpp  shape.cpp
src/include/: shape.h
